# ESMR

./: README.md  main.py  pyproject.toml
data/: equipment.xlsx
src/: calendar_logic.py  logic.py
templates/: template_hazard.docx
